# KStickyNotes

./: CMakeLists.txt  Note.qml  NoteManager.cpp  NoteManager.h  README.md  main.cpp
